# DSight

./: CMakeLists.txt  DSight.geany  TODO.md
Python/: CMakeLists.txt  Macros.hpp  PythonCanvas.cpp  PythonCanvas.hpp  PythonCharts.cpp  PythonContextHandler.cpp  PythonContextHandler.hpp  PythonDSight.cpp  PythonDSight.hpp  PythonEnum.cpp  PythonExceptionWrapper.cpp  PythonExceptionWrapper.hpp  PythonHistogram.cpp  PythonHistogram.hpp  PythonViewport.cpp  PythonViewport.hpp  python.hpp.in  setup.py.in
Python-pybind11/: CMakeLists.txt  PythonDSight.cpp  PythonDSight.hpp  PythonEnum.cpp  PythonExceptions.cpp
Python/tests/: ContextHandler.py  TestCanvas.py  TestContextHandler.py
Python/unittest/: ContextHandler.py
src/: Area.hpp  Macros.hpp
src/Canvas/: CMakeLists.txt  Canvas.cpp  Canvas.hpp
src/Charts/: CMakeLists.txt  Chart.cpp  Chart.hpp  Histogram.cpp  Histogram.hpp  HistogramBackend.hpp  HistogramCPU.cpp  HistogramCPU.hpp  HistogramGL.cpp  HistogramGL.hpp
src/Contexts/: CMakeLists.txt  ContextBase.hpp  ContextCodes.hpp  ContextGLFW3.cpp  ContextGLFW3.hpp  ContextHandler.cpp  ContextHandler.hpp  ContextWrapper.cpp  ContextWrapper.hpp
src/Exceptions/: BaseException.cpp  BaseException.hpp  CMakeLists.txt  DSightBaseException.cpp  DSightBaseException.hpp  ExceptionCodes.hpp  ExceptionMessages.hpp
src/Viewport/: CMakeLists.txt  Viewport.cpp  Viewport.hpp
test/: CMakeLists.txt  TestContextHandler.cpp
tests/: CMakeLists.txt  TestCanvas.cpp  TestContextHandler.cpp
